e-commerce: Implement front ui and code refactor

--- a/libs/e-commerce-lib/src/lib/admin/features/dashboard/dashboard-home.component.html
+++ b/libs/e-commerce-lib/src/lib/admin/features/dashboard/dashboard-home.component.html
@@ -4,139 +4,31 @@
 
 <ng-template #showDashboard>
   <ui-dashboard-layout>
-    <section inventory>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
-      <div>2</div>
+    <section
+      inventory
+      class="p-4 grid grid-cols-1 gap-4 place-items-center xl:grid-cols-3"
+    >
+      <!-- <div
+        class="border border-white w-full grid grid-cols-1 place-items-center xl:grid-cols-3"
+      > -->
+      <e-commerce-shared-product-card></e-commerce-shared-product-card>
+      <e-commerce-shared-product-card></e-commerce-shared-product-card>
+      <e-commerce-shared-product-card></e-commerce-shared-product-card>
+      <e-commerce-shared-product-card></e-commerce-shared-product-card>
+      <e-commerce-shared-product-card></e-commerce-shared-product-card>
+      <e-commerce-shared-product-card></e-commerce-shared-product-card>
+      <e-commerce-shared-product-card></e-commerce-shared-product-card>
+      <e-commerce-shared-product-card></e-commerce-shared-product-card>
+      <!-- </div> -->
     </section>
-    <section orders>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
-      <div>589585</div>
+    <section orders class="p-4 gap-4 grid grid-flow-row">
+      <ui-order></ui-order>
+      <ui-order></ui-order>
+      <ui-order></ui-order>
+      <ui-order></ui-order>
+      <ui-order></ui-order>
+      <ui-order></ui-order>
+      <ui-order></ui-order>
     </section>
   </ui-dashboard-layout>
 </ng-template>
