--- a/libs/shared-ui/src/lib/pages/page-not-found/page-not-found.component.html
+++ b/libs/shared-ui/src/lib/pages/page-not-found/page-not-found.component.html
@@ -1,1 +1,26 @@
-<p>page-not-found works!</p>
+<main
+  class="h-full w-full flex flex-col bg-gradient-to-tr from-emerald-300 to-emerald-900"
+>
+  <div class="h-3/5 lg:h-4/5 w-full grid place-items-center">
+    <div class="lg:w-3/5">
+      <img src="assets/404/404.svg" alt="Page not found" />
+    </div>
+  </div>
+  <div class="h-2/5 lg:h-1/5 w-full grid place-items-center">
+    <div class="text-2xl">Oops.. Page not found</div>
+    <div class="flex gap-14">
+      <button
+        utilsBackButton
+        class="border border-dark dark:border-light hover:bg-accent transition-colors duration-300 rounded-full py-2 px-4"
+      >
+        Go back
+      </button>
+      <button
+        routerLink="/"
+        class="border border-dark dark:border-light hover:bg-accent transition-colors duration-300 rounded-full py-2 px-4"
+      >
+        Go Home
+      </button>
+    </div>
+  </div>
+</main>
