e-commerce-client:Implement filter

--- a/libs/e-commerce-lib/src/lib/client/features/product-detail/product-detail.component.html
+++ b/libs/e-commerce-lib/src/lib/client/features/product-detail/product-detail.component.html
@@ -64,6 +64,7 @@
       <div class="flex gap-14">
         <button
           utilsBackButton
+          (click)="resetProductsView()"
           class="border border-dark hover:bg-accent transition-colors duration-300 rounded-full py-2 px-4"
         >
           Go back
