--- a/libs/e-commerce-lib/src/lib/client/features/products/products.component.html
+++ b/libs/e-commerce-lib/src/lib/client/features/products/products.component.html
@@ -12,7 +12,7 @@
       >
         <e-commerce-shared-product-card
           *ngFor="let product of products"
-          [inputImage]="product.images[0]"
+          [inputImage]="product.image"
           inputMode="view"
           [inputProductName]="product.name"
           [inputProductPrice]="product.price"
