e-commerce: Major code refactor.

--- a/apps/showcase-app/src/styles.scss
+++ b/apps/showcase-app/src/styles.scss
@@ -101,6 +101,6 @@ html,
   @apply bg-e-com-front-primary;
 }
 
-.e-commerce-error-snackbar {
+.e-commerce-snackbar {
   @apply bg-e-com-secondary-variant;
 }
