--- a/libs/e-commerce-lib/src/lib/admin/ui/ui-add-product/ui-add-product.component.scss
+++ b/libs/e-commerce-lib/src/lib/admin/ui/ui-add-product/ui-add-product.component.scss
@@ -1,3 +1,7 @@
 .add-input {
   @apply text-dark rounded-sm py-1 lg:text-lg lg:h-10 px-2 bg-light focus:outline-e-com-accent;
 }
+
+textarea {
+  @apply text-dark rounded-sm py-1 lg:text-lg px-2 bg-light focus:outline-e-com-accent;
+}
