--- a/libs/e-commerce-lib/src/lib/admin/features/dashboard/dashboard-home.component.html
+++ b/libs/e-commerce-lib/src/lib/admin/features/dashboard/dashboard-home.component.html
@@ -3,10 +3,14 @@
 </ng-container>
 
 <ng-template #showDashboard>
-  <ui-dashboard-layout>
+  <ui-dashboard-layout
+    [inputIsPending$]="isPending$"
+    [inputContent]="content"
+    (outputHandleMenuclick)="handleMenuClick($event)"
+  >
     <section inventory>
-      <shared-ui-loader [inputIsLoading$]="isPending$">
-        <ng-container *ngIf="products$ | async as products">
+      <ng-container *ngIf="products$ | async as products">
+        <ng-container *ngIf="products.length > 0; else noProducts">
           <section
             class="p-4 grid grid-cols-1 gap-4 place-items-center lg:grid-cols-3"
           >
@@ -20,7 +24,7 @@
             ></e-commerce-shared-product-card>
           </section>
         </ng-container>
-      </shared-ui-loader>
+      </ng-container>
     </section>
 
     <section add>
@@ -31,4 +35,28 @@
       ></ui-add-product>
     </section>
   </ui-dashboard-layout>
+</ng-template>
+
+<ng-template #noProducts>
+  <section class="flex flex-col gap-12 px-12 py-20 lg:py-14">
+    <div class="w-full grid place-items-center">
+      <div class="lg:w-3/5">
+        <img
+          src="assets/e-commerce/no-products-dashboard.svg"
+          alt="No products yet"
+        />
+      </div>
+    </div>
+    <div class="h-2/5 lg:h-1/5 w-full gap-6 grid place-items-center">
+      <div class="text-xl text-center">No products available yet.</div>
+      <div>
+        <button
+          (click)="handleMenuClick('add')"
+          class="border border-light hover:bg-e-com-secondary-variant transition-colors duration-300 rounded-full py-2 px-4"
+        >
+          Add Product
+        </button>
+      </div>
+    </div>
+  </section>
 </ng-template>
