--- a/libs/e-commerce-lib/src/lib/admin/ui/ui-add-product/ui-add-product.component.html
+++ b/libs/e-commerce-lib/src/lib/admin/ui/ui-add-product/ui-add-product.component.html
@@ -24,14 +24,15 @@
     </div>
     <div class="flex flex-col gap-2">
       <label for="description">Description</label>
-      <input
-        class="add-input"
-        type="text"
+      <textarea
+        rows="5"
         name="description"
         id="description"
-        placeholder="Some product description"
+        placeholder="Product description"
         formControlName="description"
-      />
+      >
+ {{ addProductForm.value.description }}</textarea
+      >
     </div>
     <div class="flex items-center justify-between lg:justify-start lg:gap-6">
       <div class="flex flex-col gap-2">
@@ -77,14 +78,16 @@
     </div>
     <div class="flex flex-col gap-2">
       <label for="shipping">Shipping Information</label>
-      <input
-        class="add-input"
-        type="text"
+      <textarea
+        rows="4"
         name="shipping"
         id="shipping"
-        placeholder="Additional shipping info"
+        placeholder="Provide shipping information if any"
         formControlName="shipping_information"
-      />
+      >
+    {{ addProductForm.value.shipping_information }}
+    </textarea
+      >
     </div>
     <div class="flex flex-col gap-2">
       <label for="image">Image</label>
@@ -116,15 +119,3 @@
     </button>
   </div>
 </main>
-
-<!-- id: number;
-brand: number;
-brands: BrandInterface;
-categories: CategoryInterface;
-category: number;
-description: string;
-image: string;
-is_available: boolean;
-name: string;
-price: number;
-shipping_information: string; -->
