--- a/libs/e-commerce-lib/src/lib/admin/ui/ui-dashboard-layout/ui-dashboard-layout.component.html
+++ b/libs/e-commerce-lib/src/lib/admin/ui/ui-dashboard-layout/ui-dashboard-layout.component.html
@@ -27,7 +27,7 @@
           class="flex items-center w-fit p-2 text-sm lg:text-base hover:text-e-com-accent transition-colors duration-300"
           [ngClass]="{
             'bg-e-com-secondary bg-opacity-70 rounded-md':
-              content === 'inventory'
+              inputContent === 'inventory'
           }"
         >
           Manage inventory
@@ -36,7 +36,8 @@
           (click)="handleMenuClick('add')"
           class="flex items-center w-fit p-2 text-sm lg:text-base hover:text-e-com-accent transition-colors duration-300"
           [ngClass]="{
-            'bg-e-com-secondary bg-opacity-70 rounded-md': content === 'add'
+            'bg-e-com-secondary bg-opacity-70 rounded-md':
+              inputContent === 'add'
           }"
         >
           Add Product
@@ -52,33 +53,47 @@
           </ng-container>
         </button>
         <ng-container *ngIf="!isViewOnMobile || !drawer.opened">
-          {{ content === 'add' ? 'Add new Product' : (content | titlecase) }}
+          {{
+            inputContent === 'add'
+              ? 'Add new Product'
+              : (inputContent | titlecase)
+          }}
         </ng-container>
       </div>
 
       <section class="h-full flex">
-        <ng-container [ngSwitch]="content">
+        <ng-container [ngSwitch]="inputContent">
           <ng-container *ngSwitchCase="'inventory'">
-            <div class="w-full">
-              <cdk-virtual-scroll-viewport
-                appendOnly
-                itemSize="50"
-                class="w-full h-full"
+            <section class="w-full">
+              <shared-ui-loader
+                [inputLoaderStyle]="'spinner'"
+                [inputIsLoading$]="inputIsPending$"
               >
-                <ng-content select="[inventory]"></ng-content>
-              </cdk-virtual-scroll-viewport>
-            </div>
+                <cdk-virtual-scroll-viewport
+                  appendOnly
+                  itemSize="50"
+                  class="w-full h-full"
+                >
+                  <ng-content select="[inventory]"></ng-content>
+                </cdk-virtual-scroll-viewport>
+              </shared-ui-loader>
+            </section>
           </ng-container>
           <ng-container *ngSwitchCase="'add'">
-            <div class="w-full">
-              <cdk-virtual-scroll-viewport
-                appendOnly
-                itemSize="50"
-                class="w-full h-full"
+            <section class="w-full">
+              <shared-ui-loader
+                [inputLoaderStyle]="'spinner'"
+                [inputIsLoading$]="inputIsPending$"
               >
-                <ng-content select="[add]"></ng-content>
-              </cdk-virtual-scroll-viewport>
-            </div>
+                <cdk-virtual-scroll-viewport
+                  appendOnly
+                  itemSize="50"
+                  class="w-full h-full"
+                >
+                  <ng-content select="[add]"></ng-content>
+                </cdk-virtual-scroll-viewport>
+              </shared-ui-loader>
+            </section>
           </ng-container>
         </ng-container>
       </section>
